# epfl-ml-project-master2

project-2-mean_girls-main/: README.md  pyproject.toml  run.py
project-2-mean_girls-main/docs/: Poetry.md
project-2-mean_girls-main/src/tsc/models/deberta/: README.md  deberta.ipynb  predict_deberta.py  train_deberta.py
project-2-mean_girls-main/src/tsc/models/distilbert/: README.md  distilbert.ipynb  predict_distilbert.py  train_distilbert.py
project-2-mean_girls-main/src/tsc/models/glove/: README.md  data.py  predict_glove.py  train_glove_logreg.py  train_glove_rf.py  train_glove_svm.py
project-2-mean_girls-main/src/tsc/models/tfidf/: README.md  data.py  predict_tfidf.py  train_tfidf_logreg.py  train_tfidf_rf.py  train_tfidf_svm.py
project-2-mean_girls-main/src/tsc/preprocess/: cooc.py  split_dataset.py
project-2-mean_girls-main/src/tsc/preprocess/embedding/: awe.py  glove_embedding.py
project-2-mean_girls-main/src/tsc/preprocess/vocab/: build_vocab.py  cut_vocab.py  pickle_vocab.py
project-2-mean_girls-main/src/tsc/utils/: helpers.py  metrics.py  paths.py
